--- a/course_work/exercise_materials/scss/main.scss
+++ b/course_work/exercise_materials/scss/main.scss
@@ -1,14 +1,11 @@
-$primary-color: #444;
-$secondary-color: yellow;
-@mixin easeOut {
-  transition: all 0.5s ease-out;
-}
+@import "config";
 
 * {
   box-sizing: border-box;
 }
 
 body {
+  @include background;
   background: $primary-color;
   color: #fff;
   height: 100%;
@@ -53,9 +50,8 @@ header {
 }
 
 main {
-  padding: 4rem;
   height: 100%;
-
+  padding: 4rem;
   .icons {
     margin-top: 1rem;
 
@@ -73,6 +69,5 @@ main {
     h1 {
       margin-top: 20vh;
     }
-   
   }
 }
