--- a/course_work/exercise_materials/scss/_config.scss
+++ b/course_work/exercise_materials/scss/_config.scss
@@ -15,6 +15,9 @@ $background-opacity: 0.3;
       background-attachment: fixed;
       background-size: cover;
 
+      width: 100%;
+      height: auto;
+
       &:after {
         content: "";
         position: absolute;
