--- a/course_work/exercise_materials/scss/_mobile.scss
+++ b/course_work/exercise_materials/scss/_mobile.scss
@@ -21,6 +21,33 @@
       margin-bottom: 1rem;
     }
   }
+  ul.menu-nav,
+  div.menu-branding {
+    width: 100%;
+    min-height: 0;
+    float: none;
+
+    &.show {
+      transform: translate3d(0, 0, 0);
+    }
+  }
+
+  .menu-nav {
+    height: 75vh;
+    transform: translate3d(-100%, 0, 0);
+    font-size: 24px;
+  }
+
+  .menu-branding {
+    height: 25vh;
+    transform: translate3d(100%, 0, 0);
+
+    .portrait {
+      background: url("../img/portrait-small.jpg");
+      width: 150px;
+      height: 150px;
+    }
+  }
 }
 
 // Smartphones
