--- a/course_work/exercise_materials/scss/_menu.scss
+++ b/course_work/exercise_materials/scss/_menu.scss
@@ -11,7 +11,8 @@
     width: 28px;
     height: 3px;
     margin: 0 0 5px 0;
-    background: white;
+    // background: white;
+    background: set-text-color($primary-color);
     @include easeOut;
   }
 
@@ -121,7 +122,9 @@
     text-transform: uppercase;
     padding: 1rem 0;
     font-weight: 300;
-    color: white;
+    // color: white;
+    color: set-text-color($primary-color);
+
     text-decoration: none;
     @include easeOut;
 
