--- a/course_work/exercise_materials/scss/_mobile.scss
+++ b/course_work/exercise_materials/scss/_mobile.scss
@@ -1,12 +1,14 @@
 // Widscreens
 @include mediaXl {
-  main {
+  .projects {
+    grid-template-columns: repeat(4, 1fr);
   }
 }
 
 // Desktops & Laptops
 @include mediaLg {
-  main {
+  .projects {
+    grid-template-columns: repeat(3, 1fr);
   }
 }
 
@@ -59,14 +61,19 @@
 
     grid-template-columns: 1fr;
   }
+
+  .projects {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
 // Smartphones
 @include mediaSm {
-  main {
-  }
-
   main#home h1 {
     margin-top: 10vh;
+  }
+
+  .projects {
+    grid-template-columns: 1fr; //no need to use repeat
   }
 }
